--- a/application/configs/application.example.ini
+++ b/application/configs/application.example.ini
@@ -10,6 +10,14 @@ resources.frontController.params.displayExceptions = 0
 resources.view[] =
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
+
+resources.db.adapter = "Pdo_Mysql"
+resources.db.params.host = "localhost"
+resources.db.params.username = "yourusername"
+resources.db.params.password = "yourpassword"
+resources.db.params.dbname = "hhblog"
+
+
 [staging : production]
 
 [testing : production]
