--- a/application/configs/application.example.ini
+++ b/application/configs/application.example.ini
@@ -1,6 +1,8 @@
 [production]
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
+phpSettings.date.timezone = "America/New_York"
+
 includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
@@ -16,7 +18,11 @@ resources.db.params.host = "localhost"
 resources.db.params.username = "yourusername"
 resources.db.params.password = "yourpassword"
 resources.db.params.dbname = "hhblog"
+resources.db.params.driver_options.1002 = "SET NAMES 'utf8', CHARACTER SET 'utf8', time_zone = 'US/Eastern'"
 
+resources.frontController.plugins.hhtag = 'Application_Plugin_Front_HHTag'
+
+resources.view.helperPath.Application_View_Helper = APPLICATION_PATH "/views/helpers/"
 
 [staging : production]
 
